# vellum

./: .gitignore  Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml
apps/web/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/plugins/: new-payroll-api.ts
apps/web/public/: sample-payroll.csv
apps/web/public/circuits/: vellum_batch_sum.json  vellum_withdraw.json
apps/web/scripts/: populate-withdraw-prover.mjs
apps/web/src/: App.tsx  bytes.ts  circuits.ts  commitment.ts  crs.ts  demo-config.ts  merkle.test.ts  merkle.ts  noir-init.ts  payroll.test.ts  payroll.ts  pool-errors.ts  poseidon.ts  proof.ts  pubkey.ts  session.ts  stellar.ts  styles.css  token-amount.ts  types.ts  vite-env.d.ts  wallet.ts  witness-leaf.test.ts  witness.test.ts  witness.ts
apps/web/src/components/: BatchEditor.tsx  StatusBar.tsx  WalletChip.tsx
circuits/batch_sum/: Nargo.toml  Prover.toml
circuits/batch_sum/src/: main.nr
circuits/scripts/: build_all.ps1  build_all.sh
circuits/withdraw/: Nargo.toml  Prover.toml
circuits/withdraw/src/: main.nr
contracts/soroban-v26/: Cargo.toml
contracts/soroban-v26/src/: contract.rs  lib.rs  merkle.rs
contracts/soroban-v26/tests/: integration.rs  pool.rs  poseidon_parity.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs
contracts/verifier/tests/: integration.rs
docs/: DEMO_CHECKLIST.md  DEMO_UI.md
scripts/: build-circuits-wsl.sh  copy-circuit-artifacts.ps1  demo-prep.ps1  deploy-testnet.ps1  deploy.ps1  e2e_local.ps1  install-toolchain-wsl.sh  install-toolchain.ps1
(+1 files in other folders)
